# Petrichor

./: .gitignore  README.md  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/work/petrichor/petrichor/: ExampleInstrumentedTest.java  ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: assets.lst
app/src/main/cpp/: native-lib.cpp
app/src/main/java/work/petrichor/petrichor/: FaceDetectionActivity.java  JumpActivity.java  MainActivity.java
app/src/main/java/work/petrichor/petrichor/utils/: FileUtils.java
app/src/main/res/drawable/: btn_capture.xml  gradient_control_panel.xml
app/src/main/res/layout/: activity_face_detection.xml  activity_jump.xml  activity_main.xml  activity_preview.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/work/petrichor/petrichor/: ExampleUnitTest.java  ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
java-part/src/work/petrichor/seeta/: Detector.java
native-part/: CMakeLists.txt
native-part/include/: detector-lib.h
native-part/lib/FaceDetection/: CMakeLists.txt
native-part/src/: detector-lib.cpp
seeta/: ._CMakeLists.txt  CMakeLists.txt  build.gradle
seeta/src/main/: AndroidManifest.xml
seeta/src/main/jni/: seeta-lib.cpp
seeta/src/main/jni/lib/seeta/: CMakeLists.txt
seeta/src/main/res/values/: strings.xml
src/work/petrichor/seeta/: FaceInfo.java  ImageData.java
vision/: build.gradle
vision/src/main/: AndroidManifest.xml
vision/src/main/java/work/petrichor/vision/: CameraHolder.java  CameraSource.java
(+25 files in other folders)
